tests/errors/test_01.xpp
// Duplicate function declaration

fn sigma(x: i32) void {}
fn sigma() void {}

fn bold() void {}
fn bold() i32 { return 1; }

fn main() void {}
